--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+::-moz-selection { 
+  background: rgba(255, 123, 0, 0.719)!important;
+}
+
+::selection {
+  background: rgba(255, 136, 0, 0.801)!important;
+}
